# snakex

./: .gitignore  CMakeLists.txt  README.md
.github/automation/: .azure-pipelines.yml  build.sh
.github/automation/env/: clang.sh
src/: CMakeLists.txt
src/cc_core/: CMakeLists.txt  game.cpp  game.hpp  proto.cpp  proto.hpp  utypes.hpp
src/cc_ncurses/: CMakeLists.txt  snakex_ncurses.cpp
src/cc_tui/: CMakeLists.txt  keyboard.hpp  main.cpp  proto.hpp  render.hpp  termios_keyboard.hpp  text_render.hpp
src/cc_websockets_client_ncurses_qt/: CMakeLists.txt  client.cpp  client.h  client.pro  main.cpp  render.cpp  render.h
src/cc_websockets_server_qt/: CMakeLists.txt  game_server.cpp  game_server.h  main.cpp  server.cpp  server.h  server.pro
src/js_html_client/: index.html
src/js_html_client/docker/: docker-compose.yml
src/js_html_client/docker/conf/: nginx.conf
src/js_html_client/docker/conf/conf.d/: default.conf
src/js_html_client/js/: game.js  log.js  swipe.js
src/py_pygame/: main.py  message.py  network.py  protocol.py
src/py_pygame/interface/: graphics.py  window.py
src/py_pygame/network/: network.py  server_log_reader.py  ws_network.py
src/rust_client/: Cargo.toml
src/rust_client/src/: drawer.rs  main.rs  utypes.rs
